Fix dark mode issues.

--- a/site_blog/styles/global.css
+++ b/site_blog/styles/global.css
@@ -5,18 +5,6 @@
   transition: 150ms ease-in-out;
 }
 
-html,
-body {
-  background: #212627;
-  color: #b8c0d3;
-}
-
-[data-theme="light"],
-[data-theme="light"] body {
-  background: #c7cde4;
-  color: #3b4345;
-}
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
